--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
 	<head>
 	</head>
-	<body style="background-color:#000;color:#fff">
-		See me in <a href="http://sirsaleh.com">My Website!</a>. <br>
-		Hope You enjoy! 
+	<body style="background-color:#050505;color:#fff;text-align:center;margin:0px">
+
+		<div style="top:100px;display: inline-block;;font-size:40px;background-color:#000;left:200px;padding-left:40px;text-align:center;border:5px solid #030303;width:400px;margin:0 auto;height:100%">
+			<span id="main_text" style="" onmouseout="getElementById('main_text').style.color='#fff';" onmouseover="getElementById('main_text').style.color='#aaa';"> See me in <a href="http://sirsaleh.com">My Website!</a>. <br>
+			Hope You enjoy! </span>
+		</div> 
+		<!-- <div style="position:fixed;width:100%;background-color:#000;height:100px"></div> -->
 	</body>
 </html>
