--- a/irasography/links.html
+++ b/irasography/links.html
@@ -8,7 +8,7 @@
 
     <ul>
       <li><a href="https://sirsaleh.github.io/irasography">Home Page</a></li>
-      <li><a href="https://sirsaleh.github.io/irasography/.html">b2b-1</a></li>
+      <li><a href="https://sirsaleh.github.io/irasography/b2b-1.html">b2b-1</a></li>
       <li><a href="https://sirsaleh.github.io/irasography/home-4.html">home-4</a></li>
       <li><a href="https://sirsaleh.github.io/irasography/b2b-2.html">b2b-2</a></li>
       <li><a href="https://sirsaleh.github.io/irasography/b2b-4.html">b2b-4</a></li>
