--- a/irasography/links.html
+++ b/irasography/links.html
@@ -7,19 +7,19 @@
     <h1>لینک‌ها برای مشاهده‌ی شارا</h1>
 
     <ul>
-      <li><a href="https://sirsaleh.github.io/irasography">Home Page</a></li>
-      <li><a href="https://sirsaleh.github.io/irasography/b2b-1.html">b2b-1</a></li>
-      <li><a href="https://sirsaleh.github.io/irasography/home-4.html">home-4</a></li>
-      <li><a href="https://sirsaleh.github.io/irasography/b2b-2.html">b2b-2</a></li>
-      <li><a href="https://sirsaleh.github.io/irasography/b2b-4.html">b2b-4</a></li>
-      <li><a href="https://sirsaleh.github.io/irasography/map-4.html">map-4</a></li>
-      <li><a href="https://sirsaleh.github.io/irasography/map-6.html">map-6</a></li>
-      <li><a href="https://sirsaleh.github.io/irasography/profile-1.html">profile-1</a></li>
-      <li><a href="https://sirsaleh.github.io/irasography/map-5.html">map-5</a></li>
-      <li><a href="https://sirsaleh.github.io/irasography/b2b-3.html">b2b-3</a></li>
-      <li><a href="https://sirsaleh.github.io/irasography/map-1.html">map-1</a></li>
-      <li><a href="https://sirsaleh.github.io/irasography/map-2.html">map-2</a></li>
-      <li><a href="https://sirsaleh.github.io/irasography/map-3.html">map-3</a></li>
+      <li><a target="_blank" href="https://sirsaleh.github.io/irasography">Home Page</a></li>
+      <li><a target="_blank" href="https://sirsaleh.github.io/irasography/b2b-1.html">b2b-1</a></li>
+      <li><a target="_blank" href="https://sirsaleh.github.io/irasography/home-4.html">home-4</a></li>
+      <li><a target="_blank" href="https://sirsaleh.github.io/irasography/b2b-2.html">b2b-2</a></li>
+      <li><a target="_blank" href="https://sirsaleh.github.io/irasography/b2b-4.html">b2b-4</a></li>
+      <li><a target="_blank" href="https://sirsaleh.github.io/irasography/map-4.html">map-4</a></li>
+      <li><a target="_blank" href="https://sirsaleh.github.io/irasography/map-6.html">map-6</a></li>
+      <li><a target="_blank" href="https://sirsaleh.github.io/irasography/profile-1.html">profile-1</a></li>
+      <li><a target="_blank" href="https://sirsaleh.github.io/irasography/map-5.html">map-5</a></li>
+      <li><a target="_blank" href="https://sirsaleh.github.io/irasography/b2b-3.html">b2b-3</a></li>
+      <li><a target="_blank" href="https://sirsaleh.github.io/irasography/map-1.html">map-1</a></li>
+      <li><a target="_blank" href="https://sirsaleh.github.io/irasography/map-2.html">map-2</a></li>
+      <li><a target="_blank" href="https://sirsaleh.github.io/irasography/map-3.html">map-3</a></li>
     </ul>
   </body>
 </html>
