Implement simple form for slider

--- a/test_circular_slider/test.html
+++ b/test_circular_slider/test.html
@@ -8,14 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>JS Round Range Slider App</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,600" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="app.css">
 </head>
 
 <body>
 
     <div class="container">
-        <h1>JS Round Range Slider App</h1>
-
         <!-- slider app container -->
         <div id="app"></div>
     </div>
@@ -33,7 +30,7 @@
                     max: 100,
                     step: 10,
                     initialValue: 50,
-                    color: '#fdcb6e',
+                    color: '#ff00ff',
                     displayName: 'Value 1'
                 },
             ]
