Fix bug in RangeRider example with legend

--- a/range-rider-demo/index.html
+++ b/range-rider-demo/index.html
@@ -81,7 +81,7 @@
 					strokeWidth: 10,
 					holderID:"rangeRiderSliderSinusTo10piWithLegend",
 					funcStart: 0,
-					funcEnd: 1,
+					funcEnd: 10*Math.PI,
 					strokeColor: "#000000",
 					percentageValue: 50,
 					progressStrokeWidth: 10,
